feat: query modal working for projects

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holo-brawl')" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
+            <div class="galleryproject" id="Holo-Brawl-VR" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holo-brawl')" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Holo Brawl VR</div>
                 <img class="projectimage" src="projects/holobrawl/holobrawlgif.gif">
                 <p class="easyreading projectinfo">
@@ -418,7 +418,7 @@
                     I'm currently developing it further as part of the Oculus Start Program!
                 </p>
             </div>           
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Collaborative Urban Virtual Environment (CURVE)', null, 'curve')">
+            <div class="galleryproject" id="CURVE" onclick="openModal(event, 'projectModal', 'Collaborative Urban Virtual Environment (CURVE)', null, 'curve')">
                 <div class="projecttext">Collaborative Urban Virtual Environment (CURVE)</div>
                 <img class="projectimage" src="projects/curve/pinboard.gif" >
                 <p class="easyreading projectinfo">
@@ -426,7 +426,7 @@
                     using SteamVR. 
                 </p>
             </div>   
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'SineAR', null, 'sine-ar')">
+            <div class="galleryproject" id="SineAR" onclick="openModal(event, 'projectModal', 'SineAR', null, 'sine-ar')">
                 <div class="projecttext">SineAR</div>
                 <img class="projectimage" src="projects/sine_ar.gif">
                 <p class="easyreading projectinfo">
@@ -436,14 +436,14 @@
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Ray Tracer', null, 'ray-tracer')">
+            <div class="galleryproject" id="Ray-Tracer" onclick="openModal(event, 'projectModal', 'Ray Tracer', null, 'ray-tracer')">
                 <div class="projecttext">Ray Tracer</div>
                 <img class="projectimage" src="projects/raytracer/lights and balls cropped.jpg">
                 <p class="easyreading projectinfo">
                     Ray tracer in C. 
                 </p>
             </div>            
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Shaders', null, 'shaders')">
+            <div class="galleryproject" id="Shaders" onclick="openModal(event, 'projectModal', 'Shaders', null, 'shaders')">
                 <div class="projecttext">Shaders</div>
                 <img class="projectimage" src="projects/shader/rainbow.gif">
                 <p class="easyreading projectinfo">
@@ -453,33 +453,33 @@
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Tree Generation', null, 'tree-generation')">
+            <div class="galleryproject" id="Tree-Generation" onclick="openModal(event, 'projectModal', 'Tree Generation', null, 'tree-generation')">
                 <div class="projecttext">Tree Generation</div>
                 <img class="projectimage" src="projects/tree_generation.png">
             </div>            
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Insect Garden', null, 'insect-garden')">
+            <div class="galleryproject" id="Insect-Garden" onclick="openModal(event, 'projectModal', 'Insect Garden', null, 'insect-garden')">
                 <div class="projecttext">Insect Garden</div>
                 <img class="projectimage" src="projects/insects/bug_26.jpg">
             </div>   
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Walter Model & Rig', null, 'walter')">
+            <div class="galleryproject" id="Walter" onclick="openModal(event, 'projectModal', 'Walter Model & Rig', null, 'walter')">
                 <div class="projecttext">Walter Model & Rig</div>
                 <img class="projectimage" src="projects/model_rig.jpg">
             </div>   
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Sketch Sage Studio', null, 'sketchsage')">
+            <div class="galleryproject" id="Sketch-Sage" onclick="openModal(event, 'projectModal', 'Sketch Sage Studio', null, 'sketchsage')">
                 <div class="projecttext">Sketch Sage Studio</div>
                 <img class="projectimage" src="projects/sketchsage.png">
             </div>   
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Human Spaceflight and Vision Empairment Poster', null, 'space-flight')">
+            <div class="galleryproject" id="Human-Spaceflight" onclick="openModal(event, 'projectModal', 'Human Spaceflight and Vision Empairment Poster', null, 'space-flight')">
                 <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
                 <img class="projectimage" src="projects/payload_picture.png">
             </div>  
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'The Electric Slide', null, 'electric-slide')">
+            <div class="galleryproject" id="Electric-Slide" onclick="openModal(event, 'projectModal', 'The Electric Slide', null, 'electric-slide')">
                 <div class="projecttext">The Electric Slide</div>
                 <img class="projectimage" src="projects/electricslide/shot_2.png">
             </div>  
