--- a/index.html
+++ b/index.html
@@ -442,14 +442,14 @@
                        
                         <div class="galleryrow">
                             <div class="modal-item">
-                                <img class="modalimage" style="width:300px;margin-top:40px;" src="projects/payload_picture.png" />
+                                <img class="modalimage" style="width:300px;margin-top:40px;" src="projects/microgravity/payload_picture.png" />
                             </div>
                             <div class="modal-item">
-                                <img class="modalimage" style="width:100px;margin-top:38px;" src="projects/experiment_cells.jpg" />
+                                <img class="modalimage" style="width:100px;margin-top:38px;" src="projects/microgravity/experiment_cells.jpg" />
                             </div>
                         </div>
                         <div class="modal-item">
-                            <img class="modalimage" style="width:300px;margin-bottom:40px;" src="projects/PosterPicture.jpg" />
+                            <img class="modalimage" style="width:300px;margin-bottom:40px;" src="projects/microgravity/PosterPicture.jpg" />
                         </div>
                     </div>
                     <!-- Babylonian stuff!!! -->
@@ -537,7 +537,7 @@
         <div class="galleryrow" id="portrait">
             <div class="galleryproject" id="Human-Spaceflight" onclick="openModal(event, 'projectModal', 'Human Spaceflight and Vision Empairment Poster', null, 'space-flight')">
                 <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
-                <img class="projectimage" src="projects/payload_picture.png">
+                <img class="projectimage" src="projects/microgravity/payload_picture.png">
                 <p class="easyreading projectinfo">
                     Retinal cell experiment sent into microgravity. 
                 </p>
