--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <img class="pageimage" src="house.gif"/>
         <div class='date-time'><span></span>.</div>
         <div class="divider">*</div>
-        <!--WHAT if I just put a timeline like linked in?-->
         <div class="info">
                 <p class="easyreading">
                     Hello! Welcome to  my website. I first built this site so that others could learn more about me,
@@ -57,18 +56,37 @@
                     <div class="timeline-block timeline-block-right">
                         <div class="marker"></div>
                         <div class="timeline-content">
-                            <h3>software engineering and XR development</h3>
-                            <span>2020-present</span>
+                            <h3>portrait art</h3>
+                            <span>2014-16</span>
                             <p>
-                                I joined the Computer Graphics and User Interfaces lab under Professor Steven Feiner, 
-                                and have been obsessed with AR & VR development ever since. While there I worked mainly on a 
-                                collaborative urban virtual environment using SteamVR. Since then I've been working on
-                                my own Oculus Quest game, Holo Brawl, through the Oculus Start Program. You can view some of my projects 
-                                <a href="index.html?page=Projects" class="easylink">here</a>.
+                                I was interested in being able to capture people's likeness, 
+                                so during this time I taught myself to draw portraits. I mainly used colored pencils on toned tan paper.
+                                You can check out some of my work <a onclick="switchPage(event, 'Artwork')" class="easylink">here</a>.
                             </p>
+                        </div>
+                    </div>
+                    <div class="timeline-block timeline-block-left">
+                        <div class="marker"></div>
+                        <div class="timeline-content">
+                            <h3>surrealism, embroidery, & pottery</h3>
+                            <span>2016-18</span>
                             <p>
-                                Otherwise, I'm currently working at <a href="http://www.zocdoc.com" target="_blank" class="easylink">Zocdoc</a>  as a software engineer 
-                                on the Video Visits and Intake team. If you're in the market for a new doctor, I highly recommend you visit them!
+                                After portraits, I began to
+                                work on larger and more surreal scenes. I also branched off into other mediums like
+                                embroidery and pottery. You can check out some of my work <a onclick="switchPage(event, 'Artwork')" class="easylink">here</a>.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline-block timeline-block-right">
+                        <div class="marker"></div>
+                        <div class="timeline-content">
+                            <h3>mechanical engineering</h3>
+                            <span>2017-19</span>
+                            <p>
+                                At the beginning of University, I was a mechanical engineering major. During that time, I enjoyed designing parts
+                                in SolidWorks and either 3D printing or laser-cutting the final form. Some of my most complete builds from then include
+                                an experiment that went into microgravity and a portable Dance Dance Revolution machine. You can check them out
+                                <a onclick="switchPage(event, 'Projects')" class="easylink">here</a>.
                             </p>
                         </div>
                     </div>
@@ -81,44 +99,25 @@
                                 After a few years, I missed the artistic aspect of my work that I felt mechanical engineering lacked. I jumped ship
                                 and became a computer science major with a focus on computer graphics and vision. Around then I worked
                                 on different shaders, a ray tracer, and custom Maya object generation tools. Check my work out
-                                <a href="index.html?page=Projects" class="easylink">here</a>.
+                                <a onclick="switchPage(event, 'Projects')" class="easylink">here</a>.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-block timeline-block-right">
                         <div class="marker"></div>
                         <div class="timeline-content">
-                            <h3>mechanical engineering</h3>
-                            <span>2017-19</span>
+                            <h3>software engineering & XR development</h3>
+                            <span>2020-present</span>
                             <p>
-                                At the beginning of University, I was a mechanical engineering major. During that time, I enjoyed designing parts
-                                in SolidWorks and either 3D printing or laser-cutting the final form. Some of my most thorough creations from then include
-                                an experiment that went into microgravity and a portable Dance Dance Revolution machine. You can check them out
-                                <a href="index.html?page=Projects" class="easylink">here</a>.
+                                I joined the Computer Graphics and User Interfaces lab under Professor Steven Feiner, 
+                                and have been obsessed with AR & VR development ever since. While there I worked mainly on a 
+                                collaborative urban virtual environment using SteamVR. Since then I've been working on
+                                my own Oculus Quest game, Holo Brawl, through the Oculus Start Program. You can view some of my projects 
+                                <a onclick="switchPage(event, 'Projects')" class="easylink">here</a>.
                             </p>
-                        </div>
-                    </div>
-                    <div class="timeline-block timeline-block-left">
-                        <div class="marker"></div>
-                        <div class="timeline-content">
-                            <h3>surrealism, embroidery, & pottery</h3>
-                            <span>2016-18</span>
                             <p>
-                                After portraits, I began to
-                                work on larger and more surreal scenes, as well as branch off into other mediums like
-                                embroidery and pottery. You can check out some of my work <a href="index.html?page=Artwork" class="easylink">here</a>.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="timeline-block timeline-block-right">
-                        <div class="marker"></div>
-                        <div class="timeline-content">
-                            <h3>portrait art</h3>
-                            <span>2014-16</span>
-                            <p>
-                                I was interested in being able to capture people's likeness, 
-                                so during this time I taught myself to draw portraits. I mainly used colored pencils on toned tan paper.
-                                You can check out some of my work <a href="index.html?page=Artwork" class="easylink">here</a>.
+                                Otherwise, I'm currently working at <a href="http://www.zocdoc.com" target="_blank" class="easylink">Zocdoc</a>  as a software engineer 
+                                on the Video Visits and Intake team. If you're in the market for a new doctor, I highly recommend you visit them!
                             </p>
                         </div>
                     </div>
@@ -401,7 +400,7 @@
                     <div class="modal-meat" id="tree-generation">
                         <p>
                             In this project, I was interested in creating a Maya plugin that lets users 
-                            easily generate different types of trees. In order to generate trees that looked 
+                            procedurally generate different types of trees. In order to generate trees that looked 
                             realistic, I used procedural L-systems with stochastic sampling. Users can input 
                             their own seeds to create even more varied trees, and they can also control 
                             parameters like branch tapering, leaf and flower density, and mesh texturing. 
