feat: small writing and link fixes

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                                 <a onclick="switchPage(event, 'Projects')" class="easylink">here</a>.
                             </p>
                             <p>
-                                Otherwise, I'm currently working at <a href="http://www.zocdoc.com" target="_blank" class="easylink">Zocdoc</a>  as a software engineer 
-                                on the Video Visits and Intake team. If you're in the market for a new doctor, I highly recommend you visit them!
+                                Otherwise, I'm currently working at <a href="http://www.zocdoc.com" target="_blank" class="easylink">Zocdoc</a> as a full stack software engineer 
+                                on the Video Visits team. If you're in the market for a new doctor, I highly recommend you visit them!
                             </p>
                         </div>
                     </div>
@@ -133,11 +133,11 @@
         <div class="divider">*</div>
         <div class="info easyreading">
             <p>
-                These are the projects I've worked on since 2017. They are ordered (for the most part) from newest to oldest.
+                These are the projects I've worked on since 2017. They are ordered largely from newest to oldest.
             </p>
             <p>
-                The latest projects are all AR and VR related and built in Unity. Before then, I worked on some GLSL shaders and a ray tracer, 
-                as well as some Python tools I wrote for Maya to help generate different 3D models. My oldest projects are from when I was still 
+                The latest projects are all AR and VR related and built in Unity. Before then I worked on GLSL shaders, a ray tracer, and custom Maya 
+                object generation tools. My oldest projects are from when I was still 
                 a mechanical engineering major in college, and include a portable Dance Dance Revolution machine and an experiment that went into microgravity. 
             </p>
         </div>
@@ -175,7 +175,7 @@
 
                         </p>
                         <p>
-                            I'm still working on this project as of June 2022, and was recently accepted to the Oculus Start Program
+                            I'm still working on this project as of June 2022, and I was recently accepted to the Oculus Start Program
                             to help me continue development. 
                         </p>
                         <div class="galleryrow">
@@ -238,8 +238,8 @@
                             in VR. 
                         </p>
                         <p>
-                            I further developed the project in Unity using SteamVR, and build the pinboards and data placards in the images below. 
-                            The pinboards afford a number of different abilities, including the bookmarking of
+                            I further developed the project in Unity using SteamVR, and built the pinboards and data placards in the images below. 
+                            The pinboards include a number of affordances, such as the bookmarking of
                             different data placards, automatic organization of placards discretely or continuously, placard filtering according
                             to a numer of different criteria, and the tethering of nearby or similar placards. 
                         </p>
@@ -307,8 +307,8 @@
                     <!-- Ray Tracer -->
                     <div class="modal-meat" id="ray-tracer">
                         <p>
-                            This is a ray tracer I wrote in C++ that uses BRDF calculations to render images,
-                            and includes features like recursive reflections, depth of field, and shadows.
+                            This is a ray tracer I wrote in C++ that uses BRDF calculations to render images.
+                            It includes features like recursive reflections, depth of field, and shadows.
                         </p>
                         <div class="modal-item">
                             <img class="modalimage" style="width:250px" src="projects/raytracer/lights and balls.jpg" />
@@ -348,7 +348,7 @@
                             <div class="modal-item">
                                 <img class="modalimage" src="projects/shader/normal.gif" />
                                 <p class="modal-item-info">
-                                    Normal
+                                    Normal Map
                                 </p>
                             </div>
                             <div class="modal-item">
@@ -449,7 +449,7 @@
                         </p>
                         <p>
                             It was suprisingly fun to play, but extremely difficult since players lose points if a button is hit
-                            even a microsecond too late or early. But overall, it was a fun project to work on. 
+                            even just slightly too late or early. But overall, it was a fun project to work on. 
                         </p>
                         <div class="galleryrow">
                             <div class="modal-item">
@@ -616,7 +616,7 @@
 
         <div class="easyreading info">
             <p>
-                I drew between most of these portraits between 2014 and 2018. 
+                I drew most of these portraits between 2014 and 2018. 
             </p>
             <p>
                 I won the Congressional Art Award for the second piece below, 
